--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <li>Historial de cambios</li>
     <li>Deshacer cambios de GIT</li>
     <li>Ramas</li>
-    <li>Cliente - Servidor</li>
+    <li>Git Cliente - Servidor</li>
+    <li>GitHub</li>
     </ul>
 
     <a href="contacto.html">Contactanos</a>
